--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
+      apiKey: "AIzaSyB0vfv8ALEMBtssF8V0VPvTCLG4wYWHp3k",
       authDomain: "quizzz-df723.firebaseapp.com",
       projectId: "quizzz-df723",
       storageBucket: "quizzz-df723.appspot.com",
